DIMITRI: fixing date + adding buttons to go back

--- a/Views/MyServices/Modify.cshtml
+++ b/Views/MyServices/Modify.cshtml
@@ -48,6 +48,9 @@
             <td>
                 <input type="submit" value="Modifier" />
             </td>
+            <td>
+                <a asp-action="MyServices">Annuler</a>
+            </td>
         </tr>
     </table>
 </form>
