DIMITRI: fixing Modify

--- a/Views/MyServices/Confirm.cshtml
+++ b/Views/MyServices/Confirm.cshtml
@@ -2,7 +2,7 @@
 
 <form asp-action="Confirm" asp-controller="MyServices" method="post">
     <input type="hidden" value="@ViewData["sId"]" name="sId" />
-    <input type="submit" value="Oui" />
+    <input type="submit" value="Yes" />
 </form>
 
 <a href="MyServices">No</a>
