--- a/Views/MyServices/Create.cshtml
+++ b/Views/MyServices/Create.cshtml
@@ -47,7 +47,7 @@
         </tr>
         <tr>
             <td>
-                <input type="submit" value="Envoyer" />
+                <input type="submit" value="Apply" />
             </td>
         </tr>
     </table>
