--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,19 +15,19 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4 my-5">Welcome to <span>OfferVerse</span></h1>
+    <h1 class="display-4 my-5"><span style="color: #FC0A7A;">Welcome</span> <span style="color: #0192D1;">to</span> <span style="color: #FFC300;">Offer</span><span style="color: #1E1E1E;">Verse</span> <img src="/Images/LogoOfferVerse.png" width="150" alt="OfferVerse Logo" /></h1>
 </div>
 
 <div class="d-flex flex-wrap align-items-center justify-content-center gap-5">
     @{
         foreach (ServiceProvided sp in Model)
         {
-            <partial name="_ServiceProvidedCard" model="sp"/>
+            <partial name="_ServiceProvidedCard" model="sp" />
         }
     }
 </div>
 
-<div class="my-4 w-75 mx-auto d-flex align-items-center justify-content-center">
+<div class="pagination">
     @if (currentPage > 1) //if at least at the second page
     {
         <a asp-action="Index" asp-route-pageNumber="@(currentPage - 1)" class="btn btn-secondary mx-1">Previous</a>
