--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,6 +24,10 @@
                         <li class="nav-item mx-2">
                             <a asp-controller="Profile" asp-action="ShowProfile" class="fs-4 btn btn-link">Profile</a>
                         </li>
+                        <li class="nav-item mx-2">
+                            <a asp-controller="Home" asp-action="Connect" class="fs-4 btn btn-link">Connection</a>
+                        </li>
+
                     </ul>
                     @if (TempData["timeCredits"] != null)
                     {
