Gary conflict login

--- a/Views/Home/Connect.cshtml
+++ b/Views/Home/Connect.cshtml
@@ -2,7 +2,7 @@
 
 <h1>Login</h1>
 
-<form method="post" asp-action="TryLogin">
+<form method="post" asp-action="Connect">
     <div class="form-group">
         <label asp-for="Email"></label>
         <input asp-for="Email" class="form-control" />
