--- a/Views/Home/ViewService.cshtml
+++ b/Views/Home/ViewService.cshtml
@@ -28,15 +28,15 @@
                     </p>
                     @if (Model.DatePriority.HasValue)
                     {
-                        <p><strong>Date Priority:</strong> @Model.DatePriority.Value.ToShortDateString()</p>
+                        <p><strong>Prioritized since:</strong> @Model.DatePriority.Value.ToShortDateString()</p>
                     }
-                    <p><strong>User:</strong> @Model.Own.FirstName @Model.Own.LastName</p>
-                    <p><strong>Contact:</strong> @Model.Own.Email</p>
+                    <p><strong>User:</strong> @Model.Own.GetFullName()</p>
+                    <p><strong>Email:</strong> @Model.Own.Email</p>
+                    <p><strong>Phone number:</strong> @string.Format("{0:###-##-##-##}", long.Parse(Model.Own.PhoneNumber))</p>
                     <p><strong>Category:</strong> @Model.Category.Name</p>
-                    <p><strong>Address:</strong> @Model.Own.StreetNumber @Model.Own.StreetName, @Model.Own.City, @Model.Own.PostCode</p>
-                    <p><strong>Phone:</strong> @Model.Own.PhoneNumber</p>
-                    <p><strong>Global Rating:</strong> @(Model.GlobalRating() != -1 ? Model.GlobalRating() + "/5" : "Not evaluated yet")</p>
-                    <p><strong>Commentaries:</strong> Based on @Model.Commentaries.Count @(Model.Commentaries.Count == 1 ? "commentary" : "commentaries")</p>
+                    <p><strong>Global Rating:</strong> @(Model.GlobalRating() != -1 ? Model.GlobalRating() + "/5" : "Not evaluated yet") 
+                        based on @Model.Commentaries.Count @(Model.Commentaries.Count == 1 ? "evaluation" : "evaluations")
+                    </p>
                 </div>
             </div>
             <div class="comment-section">
