--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link" asp-controller="Profile" asp-action="ShowProfile">Profile</a>
                         </li>
                         <li class="nav-item mx-2">
-                            <a asp-controller="Home" asp-action="Connect" class="fs-4 btn btn-link">Connection</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Connect">Connection</a>
                         </li>
 
                     </ul>
