--- a/Views/Home/ViewService.cshtml
+++ b/Views/Home/ViewService.cshtml
@@ -1,23 +1,31 @@
-﻿@model ServiceProvided
+﻿@using OfferVerse.ViewModels
+@model ViewServiceViewModel
 
 @{
     ViewBag.Title = "Service Details";
+
+    ViewDataDictionary vd = new(ViewData);
+    vd["message"] = TempData["message"];
 }
+
+<partial name="_displayAlertMessage" view-data="vd"/>
 
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-10">
             <div class="bg-secondary text-white p-4 mb-4">
-                <h3>@Model.Title</h3>
+                <h3>@Model.ServiceProvided.Title</h3>
+                <hr />
+                <p class="my-0">@Model.ServiceProvided.Description</p>
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="@Model.Category.ImagePath" alt="@Model.Category.Name" class="img-fluid mb-3 w-100" />
+                    <img src="@Model.ServiceProvided.Category.ImagePath" alt="@Model.ServiceProvided.Category.Name" class="img-fluid mb-3 w-100" />
                 </div>
                 <div class="col-md-8">
-                    <p><strong>Description:</strong> @Model.Description</p>
+                    
                     <p>
-                        <strong>Priority:</strong> @if (Model.Priority)
+                        <strong>Priority:</strong> @if (Model.ServiceProvided.Priority)
                         {
                             <span class="text-warning">Enhanced</span>
                         }
@@ -26,26 +34,47 @@
                             <span class="text-secondary">Standard</span>
                         }
                     </p>
-                    @if (Model.DatePriority.HasValue)
+                    @if (Model.ServiceProvided.DatePriority.HasValue)
                     {
-                        <p><strong>Prioritized since:</strong> @Model.DatePriority.Value.ToShortDateString()</p>
+                        <p><strong>Prioritized since:</strong> @Model.ServiceProvided.DatePriority.Value.ToShortDateString()</p>
                     }
-                    <p><strong>User:</strong> @Model.Own.GetFullName()</p>
-                    <p><strong>Email:</strong> @Model.Own.Email</p>
-                    <p><strong>Phone number:</strong> @string.Format("{0:###-##-##-##}", long.Parse(Model.Own.PhoneNumber))</p>
-                    <p><strong>Category:</strong> @Model.Category.Name</p>
-                    <p><strong>Global Rating:</strong> @(Model.GlobalRating() != -1 ? Model.GlobalRating() + "/5" : "Not evaluated yet") 
-                        based on @Model.Commentaries.Count @(Model.Commentaries.Count == 1 ? "evaluation" : "evaluations")
+                    <p><strong>Provider:</strong> @Model.ServiceProvided.Own.GetFullName()</p>
+                    <p><strong>Email:</strong> @Model.ServiceProvided.Own.Email</p>
+                    <p><strong>Phone number:</strong> @string.Format("{0:###-##-##-##}", long.Parse(Model.ServiceProvided.Own.PhoneNumber))</p>
+                    <p><strong>Category:</strong> @Model.ServiceProvided.Category.Name</p>
+                    <p>
+                        <strong>Global Rating:</strong>
+                        @(Model.ServiceProvided.GlobalRating() != -1 ? Model.ServiceProvided.GlobalRating() + "/5" : "Not evaluated yet")
+                        @if (Model.ServiceProvided.GlobalRating() != -1 && Model.ServiceProvided.Commentaries.Any())
+                        {
+                            <span>based on @Model.ServiceProvided.Commentaries.Count @(Model.ServiceProvided.Commentaries.Count == 1 ? "evaluation" : "evaluations")</span>
+                        }
                     </p>
+
                 </div>
             </div>
+            <div class=" my-3 d-flex align-items-center justify-content-start gap-3">
+                <a asp-action="Index" class="btn btn-dark">Back</a>
+                @{
+                    if(Model.Favorites.Count > 0 &&
+                       Model.Favorites.Contains(Model.ServiceProvided))
+                    {
+                        <a asp-action="DeleteFromFavorite" asp-route-servicePId="@Model.ServiceProvided.ServiceProvidedId" class="btn btn-danger">Delete from favorite</a>
+                    }
+                    else
+                    {
+                        <a asp-action="PutInFavorite" asp-route-servicePId="@Model.ServiceProvided.ServiceProvidedId" class="btn btn-warning">Add to favorite</a>
+                    }
+                }
+            </div>
+
             <div class="comment-section">
                 <!-- Section pour afficher les commentaires -->
-                @if (Model.Commentaries.Any())
+                @if (Model.ServiceProvided.Commentaries.Any())
                 {
                     <h5 class="comment-section-title">Comments:</h5>
                     <ul class="comment-list">
-                        @foreach (Commentary comment in Model.Commentaries)
+                        @foreach (Commentary comment in Model.ServiceProvided.Commentaries)
                         {
                             <li class="comment-item">
                                 <div class="comment-author">@comment.User.GetFullName()</div>
@@ -68,7 +97,7 @@
                     <p class="no-comments-message">No comments yet.</p>
                 }
             </div>
-            <a asp-action="Index" class="btn btn-back">Back</a>
+            
         </div>
     </div>
 </div>
