--- a/Views/Home/Connect.cshtml
+++ b/Views/Home/Connect.cshtml
@@ -23,6 +23,8 @@
     <button type="submit" class="btn btn-primary">Login</button>
 </form>
 
+<p>You don't have an account yet? Create one here</p>
+<a asp-controller="Home" asp-action="Register" class="btn btn-secondary">Register</a>
 
 
 
