--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -1,28 +1,61 @@
-﻿<h2>Create Account</h2>
-<form action="todefine" method="post">
-    <label for="firstName">First Name</label>
-    <input type="text" id="firstName" name="firstName" required>
+﻿@model User
 
-    <label for="lastName">Last Name</label>
-    <input type="text" id="lastName" name="lastName" required>
+@{
+    ViewDataDictionary vd = new(ViewData);
+    vd["message"] = TempData["message"];
+}
+<partial name="_displayAlertMessage" view-data="vd" />
 
-    <label for="phoneNumber">Phone Number</label>
-    <input type="tel" id="phoneNumber" name="phoneNumber" required>
-
-    <label for="streetName">Street Name</label>
-    <input type="text" id="streetName" name="streetName" required>
-
-    <label for="streetNumber">Street Number</label>
-    <input type="text" id="streetNumber" name="streetNumber" required>
-
-    <label for="postalCode">Postal Code</label>
-    <input type="text" id="postalCode" name="postalCode" required>
-
-    <label for="city">City</label>
-    <input type="text" id="city" name="city" required>
-
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required>
-
-    <button type="submit">Create Account</button>
+<form method="post" asp-action="Register">
+    <div class="form-group">
+        <label asp-for="FirstName"></label>
+        <input asp-for="FirstName" class="form-control" />
+        <span asp-validation-for="FirstName" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="LastName"></label>
+        <input asp-for="LastName" class="form-control" />
+        <span asp-validation-for="LastName" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Email"></label>
+        <input asp-for="Email" class="form-control" />
+        <span asp-validation-for="Email" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="PhoneNumber"></label>
+        <input asp-for="PhoneNumber" class="form-control" />
+        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="City"></label>
+        <input asp-for="City" class="form-control" />
+        <span asp-validation-for="City" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="PostCode"></label>
+        <input asp-for="PostCode" class="form-control" />
+        <span asp-validation-for="PostCode" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="StreetName"></label>
+        <input asp-for="StreetName" class="form-control" />
+        <span asp-validation-for="StreetName" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="StreetNumber"></label>
+        <input asp-for="StreetNumber" class="form-control" />
+        <span asp-validation-for="StreetNumber" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Password"></label>
+        <input asp-for="Password" class="form-control" />
+        <span asp-validation-for="Password" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="ConfirmPassword"></label>
+        <input asp-for="ConfirmPassword" class="form-control" />
+        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
 </form>
