--- a/Views/Home/_displayAlertMessage.cshtml
+++ b/Views/Home/_displayAlertMessage.cshtml
@@ -39,6 +39,34 @@
                     <p class="mb-0">If the changes do not appear please report it at <a href="mailto:administrators@offerverse.com">administrators@offerverse.com</a>.</p>
                 </div>
                 break;
+            case "The password don't match.":
+                <div class="alert alert-warning" role="alert">
+                    <h4 class="alert-warning">The passwords don't match</h4>
+                    <p>The passwords you typed don't match. Please, try again.</p>
+                    <hr />
+                    <p class="mb-0">If something is going wrong, please report it at <a href="mailto:administrators@offerverse.com">administrators@offerverse.com</a>.</p>
+                </div>
+                break;
+            case "An error has occured.":
+                <div class="alert alert-warning" role="alert">
+                    <h4 class="alert-warning">An error has occured.</h4>
+                    <p>An error has occured.. Please, try again.</p>
+                    <hr />
+                    <p class="mb-0">If something is going wrong, please report it at <a href="mailto:administrators@offerverse.com">administrators@offerverse.com</a>.</p>
+                </div>
+                break;
+            case "The account has been created":
+                <div class="alert alert-success" role="alert">
+                    <h4 class="alert-success">Well done!</h4>
+                    <p>The account has been created.</p>
+                </div>
+                break;
+            case "Successfully connected.":
+                <div class="alert alert-success" role="alert">
+                    <h4 class="alert-heading">Well done!</h4>
+                    <p>Successfully connected.</p>
+                </div>
+                break;
 
             default:
                 break;
