--- a/Views/Home/_displayAlertMessage.cshtml
+++ b/Views/Home/_displayAlertMessage.cshtml
@@ -74,6 +74,24 @@
                 </div>
                 break;
 
+            case "Deleted from your favorites":
+                <div class="alert alert-success" role="alert">
+                    <h4 class="alert-success">Well done!</h4>
+                    <p>You have successfully deleted this service from your favorites</p>
+                    <hr />
+                    <p class="mb-0">If the changes do not appear, please report it at <a href="mailto:administrators@offerverse.com">administrators@offerverse.com</a>.</p>
+                </div>
+                break;
+
+            case "Not deleted from your favorites":
+                <div class="alert alert-danger" role="alert">
+                    <h4 class="alert-danger">Something went wrong...</h4>
+                    <p>A problem occurred during the process</p>
+                    <hr />
+                    <p class="mb-0">If the problem persist, please report it at <a href="mailto:administrators@offerverse.com">administrators@offerverse.com</a>.</p>
+                </div>
+                break;
+
             default:
                 break;
         }
