--- a/Views/Home/_displayAlertMessage.cshtml
+++ b/Views/Home/_displayAlertMessage.cshtml
@@ -92,6 +92,23 @@
                 </div>
                 break;
 
+            case "Service Asked":
+                <div class="alert alert-success" role="alert">
+                    <h4 class="alert-success">Well done!</h4>
+                    <hr />
+                    <p class="mb-0">The demanded has been sent to the service provider, you'll be contacted soon.</p>
+                </div>
+                break;
+
+            case "Unable to Ask a service":
+                <div class="alert alert-danger" role="alert">
+                    <h4 class="alert-danger">Something went wrong...</h4>
+                    <p class="text-danger">We are not able to contact the service provider.</p>
+                    <hr />
+                    <p class="mb-0">If the problem persist, please report it at <a href="mailto:administrators@offerverse.com">administrators@offerverse.com</a>.</p>
+                </div>
+                break;
+
             default:
                 break;
         }
