--- a/Views/Profile/_Partials/_PositiveCreditsTransactionsDetails.cshtml
+++ b/Views/Profile/_Partials/_PositiveCreditsTransactionsDetails.cshtml
@@ -2,7 +2,7 @@
 
 <tr class="alert-success">
     <th scope="row">@ViewData["index"]</th>
-    <td>@Model.StartService.ToString("dd/MM/yyyy")</td>
+    <td>@(Model.StartService.HasValue ? @Model.StartService.Value.ToString("dd/MM/yyyy") : "N/A")</td>
     <td>@(Model.EndService.HasValue ? @Model.EndService.Value.ToString("dd/MM/yyyy") : "N/A")</td>
     <td>@Model.ServiceDemander.LastName.ToUpper() @Model.ServiceDemander.FirstName[0].ToString().ToUpper()@Model.ServiceDemander.FirstName.Substring(1)</td>
     <td>You</td>
