DIMITRI: create manage demands, accept and refuse

--- a/Views/Profile/_Partials/_NegativeCreditsTransactionsDetails.cshtml
+++ b/Views/Profile/_Partials/_NegativeCreditsTransactionsDetails.cshtml
@@ -2,7 +2,7 @@
 
 <tr class="alert-danger">
     <th scope="row">@ViewData["index"]</th>
-    <td>@Model.StartService.ToString("dd/MM/yyyy")</td>
+    <td>@Model.StartService.Value.ToString("dd/MM/yyyy")</td>
     <td>@(Model.EndService.HasValue ? @Model.EndService.Value.ToString("dd/MM/yyyy") : "N/A")</td>
     <td>You</td>
     <td>@Model.ServiceProvider.LastName.ToUpper() @Model.ServiceProvider.FirstName[0].ToString().ToUpper()@Model.ServiceProvider.FirstName.Substring(1)</td>
