--- a/Views/Profile/_Partials/_ServiceProvidedInProgressDetails.cshtml
+++ b/Views/Profile/_Partials/_ServiceProvidedInProgressDetails.cshtml
@@ -2,7 +2,7 @@
 
 <tr>
     <th scope="row">@ViewData["index"]</th>
-    <td>@Model.StartService.ToString("dd/MM/yyyy")</td>
+    <td>@Model.StartService.Value.ToString("dd/MM/yyyy")</td>
     <td>
         @Model.ServiceDemander.LastName.ToUpper()
         @Model.ServiceDemander.FirstName[0].ToString().ToUpper()@Model.ServiceDemander.FirstName.Substring(1)
