--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item mx-2">
                             <a class="nav-link" asp-controller="Home" asp-action="Connect">Connection</a>
                         </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" asp-controller="ServicesDemand" asp-action="ViewServicesDemand">My Demands</a>
+                        </li>
 
                     </ul>
                     @if (TempData["timeCredits"] != null)
