--- a/Views/MyServices/MyServices.cshtml
+++ b/Views/MyServices/MyServices.cshtml
@@ -36,3 +36,7 @@
 <div class="container">
     <a asp-action="Create" class="btn btn-primary mt-3">Create a service</a>
 </div>
+
+<div>
+    <a asp-controller="Home" asp-action="Index">Back</a>
+</div>
