--- a/Views/Home/_displayAlertMessage.cshtml
+++ b/Views/Home/_displayAlertMessage.cshtml
@@ -103,7 +103,7 @@
             case "Unable to Ask a service":
                 <div class="alert alert-danger" role="alert">
                     <h4 class="alert-danger">Something went wrong...</h4>
-                    <p class="text-danger">We are not able to contact the service provider.</p>
+                    <p>We are not able to contact the service provider.</p>
                     <hr />
                     <p class="mb-0">If the problem persist, please report it at <a href="mailto:administrators@offerverse.com">administrators@offerverse.com</a>.</p>
                 </div>
@@ -112,7 +112,8 @@
             case "Successfully disconnected.":
                 <div class="alert alert-success" role="alert">
                     <h4 class="alert-heading">Successfully disconnected.</h4>
-                    <p>You have been successfully disconnected.</p>
+                    <hr />
+                    <p class="mb-0">You have been successfully disconnected.</p>
                 </div>
                 break;
             case "You are not logged in.":
