--- a/Views/MyServices/Modify.cshtml
+++ b/Views/MyServices/Modify.cshtml
@@ -1,59 +1,40 @@
-﻿@using OfferVerse.ViewModels;
-@model CreateModifySPViewModel;
+﻿@using OfferVerse.ViewModels
+@model CreateModifySPViewModel
 
-<form asp-controller="MyServices" asp-action="Modify" method="post">
-    <table>
-        <tr>
-            <td>
-                <label asp-for="Sp.Title"></label>
-            </td>
-            <td>
-                <input asp-for="Sp.Title"/>
-            </td>
-            <td>
-                <span asp-validation-for="Sp.Title" class="text-danger px-2"></span>
-            </td>
-        </tr>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <h1 class="mb-4">Modify Service</h1>
+            <form asp-controller="MyServices" asp-action="Modify" method="post">
+                <div class="mb-3">
+                    <label asp-for="Sp.Title" class="form-label"></label>
+                    <input asp-for="Sp.Title" class="form-control" />
+                    <span asp-validation-for="Sp.Title" class="text-danger"></span>
+                </div>
 
-        <tr>
-            <td>
-                <label asp-for="Sp.Description"></label>
-            </td>
-            <td>
-                <input asp-for="Sp.Description"/>
-            </td>
-            <td>
-                <span asp-validation-for="Sp.Description" class="text-danger px-2"></span>
-            </td>
-        </tr>
-        
-        <tr>
-            <td>
-                <label asp-for="Categories"></label>
-            </td>
-            <td>
-                <select asp-for="Sp.Category.CategoryId">
-                    @foreach(var cat in Model.Categories)
-                    {
-                        <option value="@cat.CategoryId">@cat.Name</option>
-                    }
-                </select>
-            </td>
-        </tr>
+                <div class="mb-3">
+                    <label asp-for="Sp.Description" class="form-label"></label>
+                    <input asp-for="Sp.Description" class="form-control" />
+                    <span asp-validation-for="Sp.Description" class="text-danger"></span>
+                </div>
 
-        <tr>
-            <td>
+                <div class="mb-3">
+                    <label asp-for="Categories" class="form-label"></label>
+                    <select asp-for="Sp.Category.CategoryId" class="form-select">
+                        @foreach (var cat in Model.Categories)
+                        {
+                            <option value="@cat.CategoryId">@cat.Name</option>
+                        }
+                    </select>
+                </div>
+
                 <input type="hidden" name="sId" value="@Model.Sp.ServiceProvidedId" />
-            </td>
-        </tr>
 
-        <tr>
-            <td>
-                <input type="submit" value="Apply" />
-            </td>
-            <td>
-                <a asp-action="MyServices">Cancel</a>
-            </td>
-        </tr>
-    </table>
-</form>
+                <div class="d-flex gap-2">
+                    <input type="submit" value="Apply" class="btn btn-primary w-25" />
+                    <a asp-action="MyServices" class="btn btn-secondary w-25">Cancel</a>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
