TERRY: update the general appearance

--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -62,7 +62,8 @@
                     <input type="password" asp-for="ConfirmPassword" class="form-control" />
                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
-                <button type="submit" class="btn btn-primary">Register</button>
+                <a class="btn btn-secondary w-25" asp-action="Index">Back</a>
+                <button type="submit" class="btn btn-primary w-25 mx-2">Register</button>
             </form>
         </div>
     </div>
