--- a/Views/MyServices/MyServices.cshtml
+++ b/Views/MyServices/MyServices.cshtml
@@ -41,9 +41,6 @@
 </div>
 
 <div class="container">
+    <a asp-controller="Home" asp-action="Index" class="btn btn-secondary mt-3">Back</a>
     <a asp-action="Create" class="btn btn-primary mt-3">Create a service</a>
-</div>
-
-<div>
-    <a asp-controller="Home" asp-action="Index">Back</a>
 </div>
