--- a/Views/Home/ViewService.cshtml
+++ b/Views/Home/ViewService.cshtml
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="d-flex gap-xl-5 justify-content-between">
-                <a asp-action="Index" class="btn btn-dark my-2 p-2 px-4 w-25">Back</a>
+                <a asp-action="Index" class="btn btn-secondary my-2 p-2 px-4 w-25">Back</a>
                 @{
                     if(Model.Favorites.Count > 0 &&
                        Model.Favorites.Contains(Model.ServiceProvided))
