--- a/Views/Home/_displayAlertMessage.cshtml
+++ b/Views/Home/_displayAlertMessage.cshtml
@@ -105,6 +105,23 @@
                     <p class="mb-0">If something is going wrong, please report it at <a href="mailto:administrators@offerverse.com">administrators@offerverse.com</a>.</p>
                 </div>
                 break;
+            case "The user has been sanctionned.":
+                <div class="alert alert-success" role="alert">
+                    <h4 class="alert-heading">The user has been sanctionned.</h4>
+                    <p>The user has been penalized for violating our community guidelines. Their time credits have been reduced by 50 points as a result of this sanction.</p>
+                </div>
+                break;
+            case "Dear admin, an error has occured.":
+                <div class="alert alert-danger" role="alert">
+                    <h4 class="alert-danger">Dear admin, an error has occured.</h4>
+                    <p>A problem occurred during the process</p>
+                </div>
+                break;
+            case "The report has been deleted.":
+                <div class="alert alert-success" role="alert">
+                    <h4 class="alert-heading">The report has been deleted.</h4>
+                </div>
+                break;
             default:
                 break;
         }
