--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         <li class="nav-item mx-2">
                             <a class="nav-link" asp-controller="Home" asp-action="Logout">Logout</a>
                         </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" asp-controller="Admin" asp-action="Admin">Admin</a>
+                        </li>
 
                     </ul>
                     @if (TempData["timeCredits"] != null)
