TERRY: upgrade general appearance and add logic to display

--- a/Views/Profile/ShowProfile.cshtml
+++ b/Views/Profile/ShowProfile.cshtml
@@ -21,6 +21,7 @@
     <a asp-controller="Home" asp-action="Index" class="btn btn-dark my-2 p-2 px-4 w-25">Back</a>
     <a asp-action="EditProfile" class="btn btn-warning my-2 p-2 px-4s w-25">Edit profile</a>
     <a asp-action="ShowInProgressServices" class="btn btn-secondary my-2 p-2 px-4 w-25">Services in progess</a>
-    <a asp-action="ShowCreditsTransactions" class="btn btn-info my-2 p-2 w-25">Check credits transactions</a>
+    <a asp-action="ShowCreditsTransactions" class="btn btn-info my-2 p-2 w-25">Credits transactions</a>
+    <a asp-action="ShowFavorites" class="btn btn-primary my-2 p-2 w-25">Favorites</a>
 </div>
         
