--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -27,8 +27,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4 my-5"><span style="color: #FC0A7A;">Welcome</span> <span style="color: #0192D1;">to</span> <span style="color: #FFC300;">Offer</span><span style="color: #1E1E1E;">Verse</span> <img src="/Images/LogoOfferVerse.png" width="150" alt="OfferVerse Logo" /></h1>
+    <p class="fs-3 my-5"><span style="font-size: 1.5em;">OfferVerse</span> - The <span style="color: #FC0A7A; font-size: 1.5em;">first</span> platform for the <span style="color: #0192D1; font-size: 1.5em;">exchange</span> of <span style="color: #0192D1; font-size: 1.5em;">services</span> between private <span style="color: #FFC300; font-size: 1.5em;">individuals</span></p>
 </div>
+
+
 
 <div class="d-flex flex-wrap align-items-center justify-content-center gap-5">
     @{
