--- a/Views/Home/_displayAlertMessage.cshtml
+++ b/Views/Home/_displayAlertMessage.cshtml
@@ -142,7 +142,7 @@
                 </div>
                 break;
             case "Wrong informations. Please, try again.Register":
-                <div class="alert alert-success" role="alert">
+                <div class="alert alert-danger" role="alert">
                     <h4 class="alert-heading">Something went wrong.</h4>
                     <p>You wrote some wrong inputs. Please, try again.</p>
                     <p class="mb-0">If something is going wrong, please report it at <a href="mailto:administrators@offerverse.com">administrators@offerverse.com</a></p>
